--- a/action.yaml
+++ b/action.yaml
@@ -44,7 +44,7 @@ runs:
       sudo apt-get install libfdisk-dev
 
       git clone https://github.com/systemd/systemd --depth=1
-      meson setup systemd/build systemd -Drepart=true -Defi=true -Dbootloader=true -Dukify=true -Dfirstboot=true
+      meson setup systemd/build systemd -Drepart=true -Defi=true -Dbootloader=true -Dukify=true -Dfirstboot=true -Dopenssl=true -Dtpm2=true
 
       BINARIES=(
         bootctl
